--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,6 @@
 
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url(https://fonts.googleapis.com/css?family=Nunito);
 
 // Variables
 @import 'variables';
@@ -8,44 +8,10 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// question
+@import 'question';
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
-}
-.counter {
-  margin-right: 30px;
-  font-size: 10px;
-  text-align: center;
-
-  strong {
-    display: block;
-    font-size: 2em;
-  }
-
-  .vote, .status {
-    width: 60px;
-    height: 60px;
-  }
-
-  .status {
-    &.unanswered {
-      border: none;
-    }
-    &.answered {
-      border: 1px solid $green;
-      color: $green;
-    }
-    &.answered-accepted {
-      background-color: $green;
-      color: $white;
-    }
-
-  }
-  .view{
-    margin-top: 10px;
-  }
-}
-
-.form-delete{
-  display: inline;
 }
